--- a/new_floor_plan_reconstruction/app/src/main/res/layout/activity_main.xml
+++ b/new_floor_plan_reconstruction/app/src/main/res/layout/activity_main.xml
@@ -84,4 +84,13 @@
         android:paddingRight="5dp"
         android:onClick="onClearButtonClicked" />
 
+    <Button
+        android:id="@+id/btn_action"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_toStartOf="@+id/pause_button"
+        android:onClick="onActionBtn"
+        android:text="ACTION" />
+
 </RelativeLayout>
