--- a/new_floor_plan_reconstruction/app/src/main/res/values/colors.xml
+++ b/new_floor_plan_reconstruction/app/src/main/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <item name="wall" type="color">#b2b2b2</item>
     <item name="explored_space" type="color">#d2d2d2</item>
     <item name="furniture" type="color">#15A6D9</item>
     <item name="user_marker" type="color">#be6A2875</item>
